# NTP

./: .gitignore  .gitignore.txt  Izveštaj.docx  README.md
rust/: Cargo.toml  docker-compose.yml
rust/api-gateway/: .env  Cargo.toml  Dockerfile
rust/api-gateway/src/: main.rs
rust/api-gateway/src/config/: app.rs  log.rs  mod.rs
rust/api-gateway/src/constants/: auth_const.rs  faculty_const.rs  lecture_const.rs  mod.rs  schedule_const.rs  staff_const.rs  urls.rs
rust/api-gateway/src/endpoints/: auth_api.rs  faculty_api.rs  hard_constraints_api.rs  lecture_api.rs  mod.rs  schedule_api.rs  shift_api.rs  soft_constraints_api.rs  staff_api.rs
rust/api-gateway/src/models/: faculty.rs  hard_constraints.rs  lecture.rs  mod.rs  schedule.rs  shift.rs  soft_constraints.rs  staff.rs
rust/api-gateway/src/utils/: client_response.rs  lecture_api.rs  mod.rs
rust/auth-service/: .env  Cargo.toml  Dockerfile
rust/auth-service/src/: main.rs  schema.rs
rust/auth-service/src/config/: app.rs  mod.rs
rust/auth-service/src/endpoints/: auth_api.rs  mod.rs
rust/auth-service/src/enums/: role.rs
rust/faculty-service/: .env  Cargo.toml  Dockerfile
rust/faculty-service/src/: main.rs  schema.rs
rust/lecture-service/: .env  Cargo.toml  Dockerfile
rust/lecture-service/src/: main.rs  schema.rs
rust/schedule-service/: .env  Cargo.toml  Dockerfile
rust/schedule-service/src/: main.rs  schema.rs
rust/src/: main.rs
rust/src/data/: admin.rs  database.rs  mod.rs
rust/src/enums/: days.rs  mod.rs  role.rs
rust/src/routing/: routing.rs
rust/staff-service/: .env  .gitignore  Cargo.toml  Dockerfile
rust/staff-service/src/: main.rs  schema.rs
(+363 files in other folders)
