[package]
name = "rust"
version = "0.1.0"
edition = "2018"
authors = ["Romana Erdelji"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.21"
strum_macros = "0.21"
serde = {version = "1.0", features = ["derive"] }
warp = "0.2"


[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["sync"]