[package]
name = "api-gateway"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures-core = "0.3.17"

serde = "1.0.127"
serde_derive = "1.0.127"
derive_more = "0.99.16"

log = "0.4.14"
log4rs = "1.0.0"

actix-cors = "0.5.4"
actix-web = "3.3.2"
awc = "2.0.3"