[package]
name = "schedule-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = "1.3"
dotenv = "0.15.0"
futures-core = "0.3.17"

serde = "1.0.127"
serde_derive = "1.0.127"
derive_more = "0.99.16"

r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"

log = "0.4.14"
log4rs = "1.0.0"

actix-cors = "0.5.4"
actix-web = "3.3.2"
actix-web-httpauth = "0.5.0"
actix-web-grants = "2.3.0"
awc = "2.0.3"

bcrypt = "0.10.1"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"

strum = "0.23"
strum_macros = "0.23"

genevo = "0.7"
rand = "0.8.4"
chrono = "0.4.23"